2009-07-30  Ankit Jain  <jankit@novell.com>

	* ReadLinesFromFile.cs (Execute): Log a warning instead of an error
	if unable to read from the file. Fix a null check. Always return
	true.

2009-07-30  Ankit Jain  <jankit@novell.com>

	* Delete.cs (Execute): Log a message when deleting a file.

2009-07-28  Ankit Jain  <jankit@novell.com>

	* Exec.cs (AddCommandLineCommands): First word from @command is treated
	as exec name, and rest as arguments. Extract arguments here.
	(ExecuteTool): Don't ignore params.
	(GenerateFullPathToTool): Extract first word as tool name.
	(HandleTaskExecutionErrors): Honor IgnoreExitCode property.
	(LogEventsFromTextOutput): Log as messages.
	* ManagedCompiler.cs (HandleTaskExecutionErrors): Implement.

2009-07-23  Ankit Jain  <jankit@novell.com>

	* AssignProjectConfiguration.cs (Execute): Implement.

2009-07-22  Ankit Jain  <jankit@novell.com>

	Fix bug #517974.
	* ResolvedReference.cs (AssemblyName): New.
	(IsPrimary): New. Primary (eg. specified in the project file) or
	dependent reference.
	(FoundInSearchPathAsString): New.
	* AssemblyResolver.cs (GetResolvedReference): Add a 'assembly name'
	param for the new field in ResolvedReference.
	(AssemblyNamesCompatible): Fix the check for public key token.
	Track api changes.

	* ResolveAssemblyReference.cs: Keep track of resolved assemblies,
	prevent duplicate references and other files.
	Process dependencies after resolving all the primary references.
	Search for dependencies in parent assembly's dir first and then
	the specified search paths.
	Detect assembly version conflicts and try to resolve.
	Improve logged messages.
	(PrimaryReference): New.
	(ResolveAssemblyReferenceHelper.AddUniqueFile): New extension method.

2009-07-16  Ankit Jain  <jankit@novell.com>

	Fix bug #519922.

	* AssemblyResolver.cs (FindInDirectory): Try the @reference as a
	filename as it is, or with different @file_extensions.
	If @reference is a assembly name, then look for *.@file_extensions