@@ -1,5 +1,12 @@
 2009-07-30  Ankit Jain  <jankit@novell.com>
 
+	* ResolvedReference.cs (.ctor): Set 'OriginalItemSpec' and 'ResolvedFrom',
+	required for IDE integration.
+	* AssemblyResolver.cs (GetResolvedReference): All the original metadata
+	should be retained. Track api changes.
+
+2009-07-30  Ankit Jain  <jankit@novell.com>
+
 	* ReadLinesFromFile.cs (Execute): Log a warning instead of an error
 	if unable to read from the file. Fix a null check. Always return
 	true.
